style keyboard using flexbox, fixes center alignment and improves margins

--- a/src/App.css
+++ b/src/App.css
@@ -80,6 +80,19 @@ input[type=checkbox] {
   letter-spacing: 0.8px;
 }
 
+/*
+ * Custom components
+ */
+
+.Parallelogram {
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  border: 2px solid #fff;
+  border-radius: 2px;
+  transform: skew(16deg);
+}
+
 .sequence-item {
   height: 40px;
   border: 1px solid #abb;
@@ -100,12 +113,27 @@ input[type=checkbox] {
   opacity: 1;
 }
 
+/*
+ * Keyboard
+ */
+
+@media (min-width: 576px) {
+  .Keyrow {
+    width: 550px;
+  }
+}
+
 .Key {
   cursor: pointer;
   background-color: #ddd;
   width: 100%;
   margin: 1px;
   padding: 0;
+  flex: 1;
+  border-radius: 2px;
+}
+.Key:focus {
+  outline: none;
 }
 
 .Key--octave {
@@ -116,41 +144,26 @@ input[type=checkbox] {
   background-color: #16b8e0;
 }
 
-@media (min-width: 576px) {
-  .Key {
-    width: 50px;
-  }
-
-  .keyrow {
-    width: 640px; /* TODO: sorta hack, fix */
-  }
-
-  .keyrow-0 {
-    margin-left: 75px;
-  }
-
-  .keyrow-1 {
-    margin-left: 50px;
-  }
-
-  .keyrow-2 {
-    margin-left: 25px;
-  }
-
-  .keyrow-3 {
-    margin-left: 0px;
-  }
+.Keyrow {
+  display: flex;
 }
 
-/*
- * Custom components
- */
 
-.Parallelogram {
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  border: 2px solid #fff;
-  border-radius: 2px;
-  transform: skew(16deg);
+@media (min-width: 576px) {
+  /* Based on each key being 10% width */
+  .Keyrow--0 {
+    margin-left: 7.5%;
+  }
+
+  .Keyrow--1 {
+    margin-left: 2.5%;
+  }
+
+  .Keyrow--2 {
+    margin-left: -2.5%;
+  }
+
+  .Keyrow--3 {
+    margin-left: -7.5%;
+  }
 }
